--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,9 +64,19 @@ const structuredData = {
     <!-- Load Font -->
     <Font
       cssVariable="--font-google-sans-code"
-      preload={[{ subset: "latin", weight: 400, style: "normal" }]}
+      preload={[
+        { subset: "latin", weight: 400, style: "normal" },
+        { subset: "latin", weight: 700, style: "normal" },
+      ]}
     />
-
+    <Font
+      cssVariable="--font-lxgw-bright-code"
+      preload={[
+        { weight: 400, style: "normal" },
+        { weight: 400, style: "italic" },
+      ]}
+    />
+    
     <!-- General Meta Tags -->
     <title>{title}</title>
     <meta name="title" content={title} />
