--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -64,7 +64,6 @@ const layoutProps = {
   modDatetime,
   canonicalURL,
   ogImage,
-  scrollSmooth: true,
 };
 
 /* ========== Prev/Next Posts ========== */
@@ -90,10 +89,7 @@ const nextPost =
     class:list={["app-layout pb-12", { "mt-8": !SITE.showBackButton }]}
     data-pagefind-body
   >
-    <h1
-      transition:name={slugifyStr(title.replaceAll(".", "-"))}
-      class="inline-block text-2xl font-bold text-accent sm:text-3xl"
-    >
+    <h1 class="inline-block text-2xl font-bold text-accent sm:text-3xl">
       {title}
     </h1>
     <div class="my-2 flex items-center gap-2">
